# opengl-loader

./: CMakeLists.txt  README.md
desktop/: glad.h
gles/: glad.h
